Merge bedrijvenBeheerScherm into main (#12)
* SDP2324VC2-108 Implementatie van AdminScherm en BedrijvenScherm

* SDP2324VC2-73 BedrijvenScherm aanpassen aan de hand van opmerkingen

* SDP2324VC2-73 BedrijfToevoegen layout aangepast

* SDP2324VC2-108 BedrijfScherm implementeren na veranderingen

* SDP2324VC2-108 De ontbrekende schermen

* SDP2324VC2-100 Aanmeld query aanpassen om klanten te filteren

* SDP2324VC2-100 Aanmaken van nieuwe data (excl Bedrijf)

* SDP2324VC2-100 Versoepelen setters, gebruikers bij bedrijf

* SDP2324VC2-100 Aanmaken van bedrijfdata

* SDP2324VC2-100 Inserten van nieuwe bedrijfsdata naar db

* SDP2324VC2-100 Administrator gebruiker inserten naar db

* SDP2324VC2-108 Implementatie van bedrijf deactiveren

* SDP2324VC2-108 Bedrijf account + layout

* SDP2324VC2-108 Crash fixes voor deactivatie button

* SDP2324VC2-108 Verwijderen van gebruikerId

* SDP2324VC2-108 Aanmaken van BedrijfBuilder

* SDP2324VC2-108 Begin van BedrijfToevoegen scherm

* SDP2324VC2-108 Initiële werkende implementatie bedrijf toevoegen

* Opschonen imports + extra info lijn bij populateDb

* SDP2324VC2-108 Toevoegen telefoonNr aan BedrijfBuilder

* SDP2324VC2-108 Afwerking BedrijvenToevoegenScherm

* SDP2324VC2-108 Refreshen van gebruikerstabel bij deactiveren bedrijf

* SDP2324VC2-108 BedrijfBuilder Bedrijf constructor fix

---------

Co-authored-by: Mohisha <mohisha.vandamme@student.hogent.be>