@@ -4,114 +4,346 @@ import java.security.SecureRandom;
 import java.util.Arrays;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import domein.*;
-import javafx.application.Application;
-import javafx.stage.Stage;
 import service.gebruiker.GebruikerService;
 import service.gebruiker.GebruikerServiceDbImpl;
+import service.bedrijf.BedrijfService;
+import service.bedrijf.BedrijfServiceDbImpl;
 
-public class PopulateDb extends Application {
+public class PopulateDb {
 	
-	public static void main(String... args) {
-        Application.launch(PopulateDb.class, args);
+	public static void main(String[] args) {
+		vulDatabase();
     }
 	
-	@Override
-    public void start(Stage stage) {
-		List<Gebruiker> mockData = maakMockData();
+	private static void vulDatabase() {
+		List<Bedrijf> bedrijfData = maakBedrijfData();
+		List<Gebruiker> adminData = maakAdministratorData();
 		
-		mockData.forEach((g) -> {
-			System.out.printf("%s, %s", g.toString(), g.getBestellingen().toString());
+		bedrijfData.forEach((b) -> {
+			// Controle op data
+			System.out.println(b.getNaam());
+			System.out.println("- " + b.getKlant().getName() + "- " + b.getKlantGebruiker().getNaam() + "- " + b.getLeverancierGebruiker().getNaam());
+			b.getLeverancierGebruiker().getBestellingen().forEach(bes -> {
+				System.out.println(" -> " + bes.getOrderId());
+			});
+			
+			if (b.getKlant().getBestellingen() == null) {
+				System.out.println(" <- Geen bestellinglijst");
+			} else {
+				b.getKlant().getBestellingen().forEach(bes -> {
+					System.out.println(" <- " + bes.getOrderId());
+				});
+			}
 		});
 		
-		GebruikerService as = new GebruikerServiceDbImpl();
+		BedrijfService bs = new BedrijfServiceDbImpl();
+		GebruikerService gs = new GebruikerServiceDbImpl();
 		
-		mockData.forEach((g) -> {
-			as.voegGebruikerToe(g);
-		});
-    }
+		long startTime = System.currentTimeMillis();
+		
+		System.out.println("Seeding van de database is bezig...");
+		try {
+			bedrijfData.forEach(b -> bs.voegBedrijfToe(b));
+			adminData.forEach(a -> gs.voegGebruikerToe(a));
+			
+			float elapsedTime = (System.currentTimeMillis() - startTime) / 1000F;
+			System.out.printf("Seeding werd succesvol afgerond (%.2f seconden)", elapsedTime);
+		} catch (Exception ex) {
+			throw ex;
+		}
+	}
 	
-	private List<Gebruiker> maakMockData() {
+	private static List<Gebruiker> maakAdministratorData() {
+		return List.of(
+				new Gebruiker(
+					Rol.ADMINISTRATOR,
+					"joris@outlook.com",
+					"1234",
+					"Joris",
+					true,
+					new Adres("Belgium", "Ghent", "9000", "Sint-Pietersplein", "59A")
+				)
+		);
+	}
+	
+	private static List<Bedrijf> maakBedrijfData() {
 		Adres[] adressen = {
-				new Adres("Belgi\u00EB","Brussels","1000","Kerkstraat","1"),
-				new Adres("Verenigde Staten","New York","10001","Broadway","20"),
-				new Adres("Nederland","Rotterdam","3011","Wolfshoek","7"),
-				new Adres("Belgi\u00EB", "Gent", "9000", "Straat", "2"),
-				new Adres("Belgi\u00EB", "Gent", "9000", "Regen", "5"),
-				new Adres("Belgi\u00EB", "Gent", "9000", "Licht", "10")
+				new Adres("Belgium", 		"Ghent", 	 "9000",  	"Sint-Pietersplein", 		"59A"),
+				new Adres("Belgium", 		"Brussels",  "1000",  	"Kerkstraat",	 			"1"),
+				new Adres("United States",	"New York",  "10001", 	"Broadway",	 				"20"),
+				new Adres("Germany", 		"Frankfurt", "60311", 	"Bendergasse",				"3"),
+				new Adres("Netherlands", 	"Rotterdam", "3011",  	"Wolfshoek",	 			"7"),
+				new Adres("France", 		"Toulouse",  "31000", 	"Rte de Narbonne", 			"209"),
+				new Adres("Sweden",			"Stockholm", "111 53", 	"Svartensgatan",			"102"),
+				new Adres("Italy",			"Milan",	 "20121",	"Piazza Luigi di Savoia",   "24"),
 		};
 		
-		//gebruikerId, rol, email, wachtwoord, naam, isActief, adres
-		List<Gebruiker> mockGebruikers = Arrays.asList(
-				new Gebruiker(1, Rol.LEVERANCIER, "eerste@hotmail.com", "1234", "Mark", true, adressen[0]),
-				new Gebruiker(2, Rol.LEVERANCIER, "tweede@hotmail.com", "password", "Mike", true, adressen[1]),
-				new Gebruiker(3, Rol.ADMINISTRATOR, "derde@hotmail.com", "123abc", "Joris", true, adressen[2]),
-				new Gebruiker(4, Rol.KLANT, "vierde@hotmail.com", "321", "Jeff", true, adressen[1]),
-				new Gebruiker(5, Rol.LEVERANCIER, "vijfde@hotmail.com", "654", "Jos", false, adressen[2])
+		List<Bedrijf> bedrijven = List.of(
+				new Bedrijf("Stella Artois", "https://logodix.com/logo/2066282.png", "Brewers",
+						adressen[1], "TODO", "mark@outlook.be", "+32974178174", "BE197248342B38", true),
+				new Bedrijf("Hewlett-Packard", "https://logodix.com/logo/4934.png", "Technology Hardware, Storage & Peripherals",
+						adressen[2], "TODO", "mike@gmail.com", "(212)912-0384", "749196976", true),
+				new Bedrijf("Bosch", "https://logodix.com/logo/9541.png", "Household Appliances",
+						adressen[3], "TODO", "julia@web.de", "+496591799946", "DE41280756350", true),
+				new Bedrijf("Ahold Delhaize", "https://logodix.com/logo/420832.png", "Food Retail",
+						adressen[4], "TODO", "kim@gmail.com", "+31659267802", "NL463774784B52", true),
+				new Bedrijf("Peugeot", "https://logodix.com/logo/9436.png", "Automobile Manufacturers",
+						adressen[5], "TODO", "christophe@outlook.com", "+33124311738", "FR4579135426784", true),
+				new Bedrijf("Ikea", "https://logodix.com/logo/470339.png", "Home Furnishings",
+						adressen[6], "TODO", "matilda@outlook.com", "+462252869831", "SW6544167324132", true),
+				new Bedrijf("Giorgio Armani", "https://logodix.com/logo/7528.jpg", "Apparel Retail",
+						adressen[7], "TODO", "francesca@outlook.com", "+393713432912", "IT7410491107419", true)
+		);
+		
+		List<Gebruiker> gebruikers = Arrays.asList(
+				new Gebruiker(Rol.ADMINISTRATOR, "joris@outlook.com", "1234", "Joris", 			true, adressen[0]),
+				new Gebruiker(Rol.LEVERANCIER, 	"mark@outlook.be", "1234", "Mark", 				true, adressen[1]),
+				new Gebruiker(Rol.KLANT, 		"mark@outlook.be", "1234", "Mark", 				true, adressen[1]),
+				new Gebruiker(Rol.LEVERANCIER, 	"mike@gmail.com", "1234", "Mike", 				true, adressen[2]),
+				new Gebruiker(Rol.KLANT, 		"mike@gmail.com", "1234", "Mike", 				true, adressen[2]),
+				new Gebruiker(Rol.LEVERANCIER, 	"julia@web.de", "1234", "Julia", 				true, adressen[3]),
+				new Gebruiker(Rol.KLANT, 		"julia@web.de", "1234", "Julia", 				true, adressen[3]),
+				new Gebruiker(Rol.LEVERANCIER, 	"kim@gmail.com", "1234", "Kim", 				true, adressen[4]),
+				new Gebruiker(Rol.KLANT, 		"kim@gmail.com", "1234", "Kim", 				true, adressen[4]),
+				new Gebruiker(Rol.LEVERANCIER, 	"christophe@outlook.com", "1234", "Christophe", true, adressen[5]),
+				new Gebruiker(Rol.KLANT, 		"christophe@outlook.com", "1234", "Christophe", true, adressen[5]),
+				new Gebruiker(Rol.LEVERANCIER, 	"matilda@outlook.com", "1234", "Matilda", 		true, adressen[6]),
+				new Gebruiker(Rol.KLANT, 		"matilda@outlook.com", "1234", "Matilda", 		true, adressen[6]),
+				new Gebruiker(Rol.LEVERANCIER, 	"francesca@outlook.com", "1234", "Francesca", 	true, adressen[7]),
+				new Gebruiker(Rol.KLANT, 		"francesca@outlook.com", "1234", "Francesca", 	true, adressen[7])
 		);
 		
 		List<Klant> klanten = Arrays.asList(
-				new Klant("KlantA", "https://clipground.com/images/placeholder-logo-5.png", "+32123456789", "klant1@hotmail.com", adressen[4]),
-				new Klant("KlantB", "https://clipground.com/images/placeholder-logo-5.png", "+32123454321", "klant2@hotmail.com", adressen[3]),
-				new Klant("KlantC", "https://clipground.com/images/placeholder-logo-5.png", "+32987654321", "klant3@hotmail.com", adressen[5])
+				new Klant("Mark", "https://logodix.com/logo/2066282.png", 		"+32974178174", "mark@outlook.be", adressen[1]),
+				new Klant("Mike", "https://logodix.com/logo/4934.png",			"(212)912-0384", "mike@gmail.com", adressen[2]),
+				new Klant("Julia", "https://logodix.com/logo/9541.png",	 		"+496591799946", "julia@web.de", adressen[3]),
+				new Klant("Kim", "https://logodix.com/logo/420832.png", 		"+31659267802", "kim@gmail.com", adressen[4]),
+				new Klant("Christophe", "https://logodix.com/logo/9436.png", 	"+33124311738", "christophe@outlook.com", adressen[5]),
+				new Klant("Matilda", "https://logodix.com/logo/470339.png", 	"+462252869831", "matilda@outlook.com", adressen[6]),
+				new Klant("Francesca", "https://logodix.com/logo/7528.jpg", 	"+393713432912", "francesca@outlook.com", adressen[7])
 		);
-		
-		List<Product> producten = List.of(
-				new Product("productA", 1000, Stock.STOCK, 500.0),
-				new Product("productB", 50000, Stock.STOCK, 4.99),
-				new Product("productC", 2100, Stock.STOCK, 19.99),
-				new Product("productD", 20, Stock.STOCK, 1119.99),
-				new Product("productE", 1, Stock.STOCK, 23000.0)
-		);
-		
-		SecureRandom sr = new SecureRandom();
 		
 		List<List<Bestelling>> bestellingen = Arrays.asList(
 				List.of(
-					new Bestelling(49111, LocalDate.now(), OrderStatus.GEREGISTREERD, BetalingsStatus.NIET_BETAALD, klanten.get(0), producten.subList(0, sr.nextInt(1, producten.size()))),
-					new Bestelling(49112, LocalDate.now(), OrderStatus.GEREGISTREERD, BetalingsStatus.BETAALD, klanten.get(1), producten.subList(0, sr.nextInt(1, producten.size())))
+						new Bestelling(
+								49001, LocalDate.now(), 
+								OrderStatus.GEREGISTREERD, BetalingsStatus.NIET_BETAALD, 
+								klanten.get(3),
+								Arrays.asList(
+										new Product("Stella Artois Lager, 12 Pack 11.2 fl. oz. Bottles", 			80, Stock.STOCK, 39.99),
+										new Product("Stella Artois Lager, 24 Pack 11.2 fl. oz. Cans",				140, Stock.STOCK, 59.99),
+										new Product("Stella Artois Premium Lager Beer, 24-11.2 fl. oz. Bottles", 	20, Stock.STOCK, 52.49),
+										new Product("Stella Artois Premium Lager Beer, 3 Pack 25 fl. oz. Cans", 	30, Stock.STOCK, 18.99)
+								)
+						),
+						new Bestelling(
+								49002, LocalDate.now(), 
+								OrderStatus.GEREGISTREERD, BetalingsStatus.NIET_BETAALD, 
+								klanten.get(4),
+								Arrays.asList(
+										new Product("Stella Artois Lager, 12 Pack 11.2 fl. oz. Bottles", 	100, Stock.STOCK, 39.99),
+										new Product("Stella Artois Lager, 24 Pack 11.2 fl. oz. Cans",		220, Stock.STOCK, 59.99)
+								)
+						)
 				),
 				List.of(
-					new Bestelling(49114, LocalDate.now(), OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, klanten.get(0), producten.subList(0, sr.nextInt(1, producten.size()))),
-					new Bestelling(49113, LocalDate.now(), OrderStatus.AAN_HET_VERWERKEN, BetalingsStatus.BETAALD, klanten.get(2), producten.subList(0, sr.nextInt(1, producten.size()))),
-					new Bestelling(49115, LocalDate.now(), OrderStatus.GELEVERD, BetalingsStatus.BETAALD, klanten.get(2), producten.subList(0, sr.nextInt(1, producten.size())))
+						new Bestelling(
+								50001, LocalDate.now(), 
+								OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, 
+								klanten.get(2),
+								Arrays.asList(
+										new Product("Business Laptop - HP Chrome Enterprise", 	300, Stock.STOCK, 469.00)
+								)
+						),
+						new Bestelling(
+								50002, LocalDate.now(), 
+								OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, 
+								klanten.get(3),
+								Arrays.asList(
+										new Product("Business Laptop - HP Elite", 				2, Stock.STOCK, 1379.00),
+										new Product("Business Desktop - HP Z2 Workstation", 	10, Stock.STOCK, 1669.00)
+								)
+						),
+						new Bestelling(
+								50003, LocalDate.now(),
+								OrderStatus.GELEVERD, BetalingsStatus.BETAALD,
+								klanten.get(5),
+								Arrays.asList(
+										new Product("Business Laptop - HP Chrome Enterprise", 	120, Stock.STOCK, 469.00)
+								)
+						)
 				),
 				List.of(
-					
+						new Bestelling(
+								51001, LocalDate.now(), 
+								OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, 
+								klanten.get(5),
+								Arrays.asList(
+										new Product("WGG1440KFG Serie 6 Wasmachine 9kg", 10, Stock.ORDER, 899.99),
+										new Product("WGB244A4FG Serie 8 Wasmachine 9kg", 2, Stock.ORDER, 1239.99)
+								)
+						),
+						new Bestelling(
+								51002, LocalDate.now(), 
+								OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, 
+								klanten.get(6),
+								Arrays.asList(
+										new Product("WGB244A4FG Serie 8 Wasmachine 9kg", 8, Stock.ORDER, 1239.99),
+										new Product("WTN85205FG Serie 4 Luchtcondensatie droogkast 8kg", 3, Stock.ORDER, 659.99)
+								)
+						)
 				),
 				List.of(
-					
+						new Bestelling(
+								52001, LocalDate.now(),
+								OrderStatus.GELEVERD, BetalingsStatus.BETAALD,
+								klanten.get(0),
+								Arrays.asList(
+										new Product("Bronwater | Romy | Niet bruisend | PET 6x2l", 8, Stock.STOCK, 2.35),
+										new Product("Cola | Original taste | Blik | Soda 15x33cl", 10, Stock.STOCK, 12.09),
+										new Product("Cola | Zonder suiker | Blik | Frisdrank 15x33cl", 10, Stock.STOCK, 12.69),
+										new Product("Bruisende Ijsthee | Original | Caloriearm | PET", 4, Stock.STOCK, 5.45),
+										new Product("Limonade | Sinaasappel | Blik | Sleek 8x33cl", 6, Stock.STOCK, 4.99),
+										new Product("Crackers | Original | Toastjes | Zout | 2x75gr", 10, Stock.STOCK, 1.85),
+										new Product("Koekje | Comté 100gr", 10, Stock.STOCK, 3.69),
+										new Product("Soep | Room | Witloof 600gr", 5, Stock.STOCK, 3.99),
+										new Product("Tomatensoep | Bio 250gr", 5, Stock.STOCK, 2.39),
+										new Product("Pompoensoep | Bio 250gr", 5, Stock.STOCK, 2.39),
+										new Product("Naturel Zout | Regular | Chips | 120G", 10, Stock.STOCK, 1.55),
+										new Product("Paprika | Regular | Chips | 120G", 10, Stock.STOCK, 1.65),
+										new Product("Gerookt | Snacks | Chips | 125G", 10, Stock.STOCK, 1.52),
+										new Product("Snack | Droge worst | Gerookt | Snack Pack 60gr", 10, Stock.STOCK, 2.99)
+								)
+						),
+						new Bestelling(
+								52002, LocalDate.now(),
+								OrderStatus.GELEVERD, BetalingsStatus.BETAALD,
+								klanten.get(0),
+								Arrays.asList(
+										new Product("Vierkant brood | Wit 800gr", 4, Stock.STOCK, 2.49),
+										new Product("Brood | Bruin | Vierkant 800gr", 4, Stock.STOCK, 2.49),
+										new Product("Brood | Volkoren | Vierkant 800gr", 4, Stock.STOCK, 3.19),
+										new Product("Gouda | Jong | Sneden", 4, Stock.STOCK, 3.15),
+										new Product("Limonade | Sinaasappel | Blik | Sleek 8x33cl", 6, Stock.STOCK, 4.99),
+										new Product("Crackers | Original | Toastjes | Zout | 2x75gr", 10, Stock.STOCK, 1.85),
+										new Product("Koekje | Comté 100gr", 10, Stock.STOCK, 3.69),
+										new Product("Soep | Room | Witloof 600gr", 5, Stock.STOCK, 3.99),
+										new Product("Tomatensoep | Bio 250gr", 5, Stock.STOCK, 2.39),
+										new Product("Pompoensoep | Bio 250gr", 5, Stock.STOCK, 2.39)
+								)
+						)
 				),
 				List.of(
-					new Bestelling(49116, LocalDate.now(), OrderStatus.ONDERWEG, BetalingsStatus.BETAALD, klanten.get(1), producten.subList(0, sr.nextInt(1, producten.size())))
+						new Bestelling(
+								53001, LocalDate.now(),
+								OrderStatus.GELEVERD, BetalingsStatus.BETAALD,
+								klanten.get(2),
+								Arrays.asList(
+										new Product("New E-208 E-Style Electric 50kWh 136 Agueda Yellow", 1, Stock.ORDER, 32650.00),
+										new Product("New E-208 E-Style Electric 50kWh 136 Nera Black", 1, Stock.ORDER, 32650.00)
+								)
+						),
+						new Bestelling(
+								53002, LocalDate.now(),
+								OrderStatus.ONDERWEG, BetalingsStatus.BETAALD,
+								klanten.get(6),
+								Arrays.asList(
+										new Product("Traveller Business VIP Standard Electric 50KWh 136 Cumulus Grey", 2, Stock.ORDER, 49495.00)
+								)
+						),
+						new Bestelling(
+								53003, LocalDate.now(),
+								OrderStatus.GEREGISTREERD, BetalingsStatus.BETAALD,
+								klanten.get(2),
+								Arrays.asList(
+										new Product("408 ALLURE 1.2L PureTech 130 EAT8 S&S Elixir Red", 1, Stock.ORDER, 32805.00)
+								)
+						),
+						new Bestelling(
+								53004, LocalDate.now(),
+								OrderStatus.GEREGISTREERD, BetalingsStatus.NIET_BETAALD,
+								klanten.get(0),
+								Arrays.asList(
+										new Product("408 ALLURE PLUG-IN HYBRID 180 e-EAT8 Okenite White", 1, Stock.ORDER, 41100.00)
+								)
+						)
+				),
+				List.of(
+						new Bestelling(
+								54001, LocalDate.now(),
+								OrderStatus.GELEVERD, BetalingsStatus.BETAALD,
+								klanten.get(0),
+								Arrays.asList(
+										new Product("OMAR 1 section shelving unit, 36 1/4x14 1/8x71 1/4 \"", 30, Stock.STOCK, 79.98)
+								)
+						),
+						new Bestelling(
+								54002, LocalDate.now(),
+								OrderStatus.AAN_HET_VERWERKEN, BetalingsStatus.BETAALD,
+								klanten.get(6),
+								Arrays.asList(
+										new Product("IVAR 2 section shelving unit, 68 1/2x19 5/8x89 \"", 12, Stock.ORDER, 275.00),
+										new Product("BUMERANG Hanger 8 pack", 80, Stock.STOCK, 4.99),
+										new Product("RIGGA Clothes rack", 20, Stock.STOCK, 19.99)
+								)
+						),
+						new Bestelling(
+								54003, LocalDate.now(),
+								OrderStatus.GEREGISTREERD, BetalingsStatus.NIET_BETAALD,
+								klanten.get(1),
+								Arrays.asList(
+										new Product("OMAR 1 section shelving unit, 36 1/4x14 1/8x71 1/4 \"", 8, Stock.STOCK, 79.98),
+										new Product("INGO Table, 47 1/4x29 1/2 \"", 4, Stock.STOCK, 99.99)
+								)
+						)
+				),
+				List.of(
+						
 				)
 		);
 		
-		for (int i = 0; i < bestellingen.size(); i++) {
-			int gebruikerIndex = i;
-			bestellingen.get(i).forEach((bestelling) -> {
-				bestelling.setLeverancier(mockGebruikers.get(gebruikerIndex));
-				bestelling.setProducten(producten.subList(0, sr.nextInt(1, producten.size())));
-			});
+		// voeg klanten toe aan de bedrijven
+		for (int i = 0; i < bedrijven.size(); i++) {
+			bedrijven.get(i).setKlant(klanten.get(i));
 		}
 		
-		for (int i = 0; i < mockGebruikers.size(); i++) {
-			mockGebruikers.get(i).setBestellingen(bestellingen.get(i));
-		}
-		
-		for (int i = 0; i < klanten.size(); i++) {
-			int huidigeKlantIndex = i;
+		// leg de bidirectionale link tussen leverancier en bestelling(en)
+		int klantNr = 0;
+		int leverancierNr = 0;
+		for (int i = 0; i < gebruikers.size(); i++) {
+			int gebruikerNr = i;
 			
-			List<Bestelling> bestellingenVoorKlant = bestellingen.stream()
-					.flatMap(lijst -> lijst.stream())
-					.filter(bestelling -> bestelling.getKlant() == klanten.get(huidigeKlantIndex))
-					.collect(Collectors.toList());
-			
-			klanten.get(i).setBestellingen(bestellingenVoorKlant);
+			// we voegen enkel bestellingen toe aan leveranciers
+			if (gebruikers.get(gebruikerNr).getRol() == Rol.LEVERANCIER) {
+				// leg de link naar bestellingen voor een leverancier
+				gebruikers.get(gebruikerNr).setBestellingen(bestellingen.get(leverancierNr));
+				
+				// voor elk van deze bestellingen, leg een link terug naar de leverancier
+				bestellingen.get(leverancierNr).forEach(bestelling -> {
+					bestelling.setLeverancier(gebruikers.get(gebruikerNr));
+				});
+				
+				// voeg de leverancierGebruiker toe aan hun bedrijf
+				bedrijven.get(leverancierNr).setLeverancierGebruiker(gebruikers.get(gebruikerNr));
+				
+				leverancierNr++;
+			} else if (gebruikers.get(gebruikerNr).getRol() == Rol.KLANT) {
+				// voeg de klantGebruiker toe aan hun bedrijf
+				bedrijven.get(klantNr).setKlantGebruiker(gebruikers.get(gebruikerNr));
+				
+				klantNr++;
+			}
 		}
 		
-		return mockGebruikers;
+		// leg de link van klant naar hun bestellingen
+		List<Bestelling> alleBestellingen = bestellingen.stream().flatMap(list -> list.stream()).collect(Collectors.toList());
+		klanten.forEach(klant -> {
+			List<Bestelling> bestellingenPerKlant = alleBestellingen.stream().filter(b -> b.getKlant() == klant).collect(Collectors.toList());
+			klant.setBestellingen(bestellingenPerKlant);
+		});
+		
+		return bedrijven;
 	}
 }
